--- a/helloworld/hagakuredjango/hagakureapp/templates/index.html
+++ b/helloworld/hagakuredjango/hagakureapp/templates/index.html
@@ -1,72 +1,77 @@
 <!DOCTYPE html>
 <html lang="ja">
 
-<head>
+<head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
   <meta charset="UTF-8">
   <meta name="description" content="佐賀のプログラミングコミュニティ。HAGAKURE PROGRAMMING塾のWebページ">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>HAGAKUREプログラミング塾｜佐賀でプログラミングを学ぶ人達のコミュニティです。</title>
   {% load static %}
-<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-WLK68MXV');</script>
-<!-- End Google Tag Manager -->
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-PQMQ82P18K"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-PQMQ82P18K');
-</script>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+  new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+  j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+  'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+  })(window,document,'script','dataLayer','GTM-WLK68MXV');</script>
+  <!-- End Google Tag Manager -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PQMQ82P18K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-PQMQ82P18K');
+  </script>
+  <!-- OGP -->
+  <meta property="og:url" content="https://hagakurepgm.net/">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="HAGAKURE_PROGRAMMING塾">
+  <meta property="og:description" content="佐賀でプログラミングを学ぶ人達のコミュニティ、HAGAKURE PROGRAMMING塾です。">
+  <meta property="og:site_name" content="HAGAKURE_PROGRAMMING">
+  <meta property="og:image" content="{% static 'images/ogp.png' %}">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:image" content="{% static 'images/ogp.png' %}">
+  <!-- Django用 -->
+  <link href="{% static 'css/style.css' %}" rel="stylesheet">
+  <!-- Bootstrap CSS -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400&display=swap" rel="stylesheet">
+  <link rel="icon" href="{% static 'images/favicon.ico' %}">
+  <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Mochiy+Pop+One&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="{% static 'js/scroll_on.js' %}"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/css/lightbox.css" rel="stylesheet">
-    <script src="{% static 'js/scroll_on.js' %}"></script>
+  <script src="{% static 'js/scroll_on.js' %}"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.7.1/js/lightbox.min.js"
             type="text/javascript"></script>
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v15.0"
-    nonce="udzJmh8R"></script>
-  <!--  OGP-->
   <!-- トップ巻物 -->
   <script src="{% static 'js/top_makimono.js' %}"></script>
 
-  <head prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb# website: http://ogp.me/ns/website#">
-    <meta property="og:url" content="https://hagakurepgm.net/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="HAGAKURE_PROGRAMMING塾">
-    <meta property="og:description" content="佐賀でプログラミングを学ぶ人達のコミュニティ、HAGAKURE PROGRAMMING塾です。">
-    <meta property="og:site_name" content="HAGAKURE_PROGRAMMING">
-    <meta property="og:image" content="{% static 'images/ogp.png' %}">
-    <meta name="twitter:card" content="summary">
-    <meta name="twitter:image" content="{% static 'images/ogp.png' %}">
-    <!-- Django用 -->
-    <link href="{% static 'css/style.css' %}" rel="stylesheet">
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/earlyaccess/hannari.css" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic:wght@300;400&display=swap" rel="stylesheet">
-    <link rel="icon" href="{% static 'images/favicon.ico' %}">
-    <link href="https://fonts.googleapis.com/css2?family=Hachi+Maru+Pop&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Zen+Maru+Gothic&display=swap" rel="stylesheet">
-    <title>HAGAKUREプログラミング塾｜佐賀でプログラミングを学ぶ人達のコミュニティです。</title>
-  </head>
+
+</head>
 
 <body>
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-WLK68MXV"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
+
+  <div id="fb-root"></div>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v15.0"
+    nonce="udzJmh8R"></script>
   <header class="wrapper_hp">
 <!--    <nav class="navbar navbar-expand navbar-light bg-light">-->
 <!--      <div class="container-fluid navbar_back_header">-->
@@ -111,20 +116,23 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                   <li class="nav-item">
                     <a class="nav-link" href="https://www.facebook.com/102157125979726">FB</a>
                   </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="term_use">利用規約</a>
+                  </li>
               </ul>
             </div>
           </div>
         </nav>
   </header>
-<section>
 
-  <!-- 巻物画面ここから -->
-  <div class="first-screen">
-    <img src="{% static 'images/top_makimono文字なし.png' %}" class="first-screen-icon-makimono" alt="Floating Image">
-    <img src="{% static 'images/logo.png' %}" class="first-screen-icon-logo" alt="Floating Image">
-    <h3>HAGAKURE<br>プログラミング塾</h3>
-    <p>佐賀県内で世代・職業を超えて同志とともに楽しく成長しませんか。</p>
-  </div>
+  <section>
+    <!-- 巻物画面ここから -->
+    <div class="first-screen">
+      <img src="{% static 'images/top_makimono文字なし.png' %}" class="first-screen-icon-makimono" alt="Floating Image">
+      <img src="{% static 'images/logo.png' %}" class="first-screen-icon-logo" alt="Floating Image">
+      <h3>HAGAKURE<br>プログラミング塾</h3>
+      <p>佐賀県内で世代・職業を超えて同志とともに楽しく成長しませんか。</p>
+    </div>
     <!-- 巻物画面ここまで -->
 
     <main class="wrapper_hp main_visual">
@@ -329,7 +337,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </section>
   <!-- New dojoここまで-->
   <!--dojoとmakimonoのグループ ここから-->
-  <div class="dojo_makimono_group wrapper_hp">
+<!--  <div class="dojo_makimono_group wrapper_hp">-->
     <!-- dojo ここから-->
     <!--
     <section class="wrapper_hp">
@@ -359,11 +367,43 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <!--dojo ここまで-->
     <!--入塾までの流れ ここから-->
     <section class="wrapper_hp nyujuku">
-      <div class="container_nyujuku">
+      <div class="container_nyujuku scroll_up">
         <h2 class="nyujuku_ttl">入塾までの流れ</h2>
-        <div class="nyujuku_flow">
-
-        </div>
+        <dl class="nyujuku_flow">
+          <div class="flow_contents">
+            <div class="contents_num">1</div>
+            <dt>申し込み</dt>
+            <dd>申込フォームから必要事項を記入して申し込みます。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/Google_Forms_logo_(2014-2020) 1.png' %}" alt="">
+            </div>
+          </div>
+          <div class="flow_contents">
+            <div class="contents_num">2</div>
+            <dt>メール</dt>
+            <dd>申し込み後、１〜２日 以内に運営から招待メールが届きます。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/mail.png' %}" alt="">
+            </div>
+          </div>
+          <div class="flow_contents">
+            <div class="contents_num">3</div>
+            <dt>参加</dt>
+            <dd>SlackおよびGitHubに招待しますので、参加します。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/Slack_icon_2019 1.png' %}" alt="">
+              <img src="{% static 'images/Octicons-mark-github 1.png' %}" alt="">
+            </div>
+          </div>
+          <div class="flow_contents">
+            <div class="contents_num">4</div>
+            <dt>学ぶ</dt>
+            <dd>参加完了です。 同志とともに楽しく学びましょう。</dd>
+            <div class="contents_img">
+              <img src="{% static 'images/samurai_inspi 1.png' %}" alt="">
+            </div>
+          </div>
+        </dl>
       </div>
     </section>
     <!--入塾までの流れ ここまで-->
